--- a/client/app/sass/styles.sass
+++ b/client/app/sass/styles.sass
@@ -14,6 +14,17 @@ $hover-color: #0f0 // green INSTEAD OF orange #ffa500
 $border-color: #999
 $clicked-row-color: #0f0 // green
 
+.app
+  display: flex
+  flex-direction: row
+  width: 100%
+
+  .cart,
+  .products
+    width: 100%
+
+
+
 .hide
   visibility: hidden
 
