--- a/client/app/sass/styles.sass
+++ b/client/app/sass/styles.sass
@@ -14,6 +14,9 @@ $hover-color: #0f0 // green INSTEAD OF orange #ffa500
 $border-color: #999
 $clicked-row-color: #0f0 // green
 
+.click
+  cursor: pointer
+
 .app
   display: flex
   flex-direction: row
@@ -22,8 +25,17 @@ $clicked-row-color: #0f0 // green
   .cart,
   .products
     width: 100%
+    .page-info
+      margin-bottom: 1em
+  
+  .products
+    .products-header
+      margin-bottom: 1em
+      span
+        margin-right: 1em
 
-
+        &.selected-type
+            border-bottom: 1px solid blue
 
 .hide
   visibility: hidden
@@ -41,8 +53,6 @@ $clicked-row-color: #0f0 // green
 body
   font-family: sans-serif, Consolas
 
-.click
-  cursor: pointer
 
 .hover-row
   background-color: $hover-color
