--- a/client/app/sass/styles.sass
+++ b/client/app/sass/styles.sass
@@ -36,6 +36,7 @@ body
   .input-quantity
     border: 0
     border-bottom: 1px solid $primary-color
+    margin-left: 10px
     width: 3em
 
   .add-cart
