--- a/client/app/sass/styles.sass
+++ b/client/app/sass/styles.sass
@@ -86,6 +86,26 @@ body
             button
               margin-right: 1em
 
+  .product
+    .product-entry
+      display: flex
+      height: 400px
+      .image-container
+        margin-right: 15px
+        width: 300px
+        img
+          max-width: 300px
+          height: 400px
+      .product-details
+        display: flex
+        flex-direction: column
+        font-size: 2em
+        div
+          margin-bottom: 0.5em
+          &.detail-add
+            button
+              margin-right: 1em
+
 .hide
   visibility: hidden
 
