--- a/client/app/sass/styles.sass
+++ b/client/app/sass/styles.sass
@@ -9,7 +9,7 @@ $black: #000
 $yellow: #ff0
 $white: #fff
 $primary-color: #1d7874
-$brown: #964B00
+$brown: #964b00
 
 $hover-color: #0f0 // green INSTEAD OF orange #ffa500 
 $border-color: #999
@@ -33,7 +33,7 @@ body
 
 .app
   margin: 1em
-  
+
   .input-quantity
     border: 0
     border-bottom: 1px solid $primary-color
@@ -42,12 +42,12 @@ body
 
   .add-cart
     background-color: $black
-    border: none
+    border: 0
     color: $white
 
   .delete-cart
     background-color: $brown
-    border: none
+    border: 0
     color: $white
     margin-left: 2em
 
@@ -55,6 +55,7 @@ body
     display: flex
     justify-content: space-between
     margin-bottom: 1em
+
     .page-back,
     .page-cart
       width: 2.5em
@@ -64,44 +65,54 @@ body
   .products
     width: 100%
 
-  
+
   .products
     .products-header
       margin-bottom: 2.5em
+
       span
         margin-right: 1em
 
         &.selected-type
-            border-bottom: 1px solid blue
+          border-bottom: 1px solid $blue
 
     .productslist-entry
       display: flex
       height: 180px
+
       &.productslist-entry-cart
         height: 90px
+
       .image-container
         margin-right: 15px
         width: 120px
+
         img
-          max-width: 120px
           height: 150px
+          max-width: 120px
+
           &.cart-image
             height: 70px
 
       .image-container-cart
         margin-right: 5px
         width: 80px
+
         img
-          max-width: 80px
           height: 150px
+          max-width: 80px
+
           &.cart-image
             height: 70px
+
       .productslist-details
         display: flex
         flex-direction: column
         font-size: 1.2em
+
         div
-          margin-bottom: 0.5em
+          margin-bottom: .5em
+
           &.detail-add
             button
               margin-right: 1em
@@ -110,18 +121,23 @@ body
     .product-entry
       display: flex
       height: 400px
+
       .image-container
         margin-right: 15px
         width: 300px
+
         img
-          max-width: 300px
           height: 400px
+          max-width: 300px
+
       .product-details
         display: flex
         flex-direction: column
         font-size: 2em
+
         div
-          margin-bottom: 0.5em
+          margin-bottom: .5em
+
           &.detail-add
             button
               margin-right: 1em
